Fixed an error in email address

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                                 </div>
                                 <div class="team-desc">
                                     <div class="team-title" style="margin-bottom:10px;"><h4>Espen Oldeman Lund</h4><span>+41 402 22 204</span></div>
-                                    <a href="mailto:espend@turapp.no" class="button button-3d button-mini button-rounded button-red">Send e-mail</a>
+                                    <a href="mailto:espen@turapp.no" class="button button-3d button-mini button-rounded button-red">Send e-mail</a>
                                 </div>
                             </div>
 
