--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <div class="swiper-slide dark" style="background-image: url('./images/page/main5.jpg');">
                         <div class="container clearfix">
                             <div class="slider-caption slider-caption-right text-right">
-                                <h2 data-caption-animate="fadeInUp">Unearthing your hidden gems</h2>
-                                <p data-caption-animate="fadeInUp" data-caption-delay="200">Join the TurApp ecosystem and give your guests the most authentic outdoor experience.</p>
+                                <h2 data-caption-animate="fadeInUp">Digitalize your greatest assets</h2>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200">TurApp is a digital tool that puts hiking and adventure guides on the global map – think; a modern day travel book for the outdoor adventurer.</p>
                                 <a data-caption-animate="fadeInUp" data-caption-delay="400" href="#section-packages" class="button button-3d button-large button-rounded button-red" style="margin-top:30px;">Sign up now</a>
                             </div>
                         </div>
@@ -115,8 +115,8 @@
                     <div class="swiper-slide dark" style="background-image: url('./images/page/main1.jpg');">
                         <div class="container clearfix">
                             <div class="slider-caption slider-caption-left">
-                                <h2 data-caption-animate="fadeInUp">Unearthing your hidden gems</h2>
-                                <p data-caption-animate="fadeInUp" data-caption-delay="200">Join the TurApp ecosystem and give your guests the most authentic outdoor experience.</p>
+                                <h2 data-caption-animate="fadeInUp">Increase sales</h2>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200">TurApp connects activity providers with adventure seekers; the Airbnb for outdoors adventures.</p>
                                 <a data-caption-animate="fadeInUp" data-caption-delay="400" href="#section-packages" class="button button-3d button-large button-rounded button-red" style="margin-top:30px;">Sign up now</a>
                             </div>
                         </div>
@@ -301,6 +301,8 @@
                                     <ul class="iconlist">
                                         <li><i class="icon-caret-right"></i>Showcase your adventures through the TurApp ecosystem, both online and through our mobile application </li>
                                         <li><i class="icon-caret-right"></i>TurApp connects you with a growing network of adventure seekers, giving your company more visibility with potential customers</li>
+                                        <li><i class="icon-caret-right"></i>With close to 200 000 application downloads, over a half a million website visits and presence in 15 regions across Norway, TurApp is growing rapidly</li>
+                                        <li><i class="icon-caret-right"></i>Engage your local ambassadors</li>
 
                                     </ul>
                                 </div>
@@ -335,9 +337,9 @@
                                 <h3>The Complete Package</h3>
                                 <div class="text-left" style="margin-top:15px; margin-bottom:-25px;">
                                     <ul class="iconlist">
-                                        <li><i class="icon-caret-right"></i>Our innovative ToolKit gives you a creative, effective marketing plan that is easy to implement </li>
-                                        <li><i class="icon-caret-right"></i>Save the environment while significantly cutting down on printing costs </li>
-                                        <li><i class="icon-caret-right"></i>Get access to our database of users for campaigns and special offers <em>* available through our Everest package</em></li>
+                                        <li><i class="icon-caret-right"></i>Our innovative ToolKit gives you a creative, effective marketing plan that is easy to implement</li>
+                                        <li><i class="icon-caret-right"></i>Save the environment while significantly cutting down on printing costs</li>
+                                        <li><i class="icon-caret-right"></i>Create in app challenges that keep your customers coming back for more</li>
                                         <li><i class="icon-caret-right"></i>Reward your loyal customers</li>
 
                                     </ul>
@@ -401,6 +403,15 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="slide">
+                                        <div class="testi-content">
+                                            <p>TurApp saved my father daughter weekend for us when Besseggen got snowed out. Luckily through TurApp we were able to find other opportunities. We met some friends coming from the other direction & coordinated through TurApp. Perfect. It saved the day!</p>
+                                            <div class="testi-meta">
+                                               Michael Holland
+                                                <span>Hiking Enthusiast</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -431,7 +442,6 @@
                     <div class="pricing-box">
                         <div class="pricing-title">
                             <h3>Mini</h3>
-                            <span>Free signup before Dec. 31st</span>
                         </div>
                         <div class="pricing-price">
                             <span class="price-unit">NOK</span>1200<span class="price-tenure">/month</span>
@@ -439,10 +449,11 @@
                         <div class="pricing-features">
                             <ul>
                                 <li><strong>10 Adventures</strong></li>
-                                <li>Basic Tool Kit</li>
-                                <li>Part of the ecosystem of adventures</li>
+                                <li>You are a guiding or adventure company, <br>boutique outdoors hotel</li>
+                                <li>Create single & multiday packages through <br>access to the TurApp database of activities</li>
+                                <li>Easy to use booking system</li>
+                                <li>Connect with a targeted audience</li>
                                 <li><strong>10 000 NOK Startup*</strong></li>
-                                <li><em>* Free signup before Dec. 31st</em></li>
                             </ul>
                         </div>
                         <div class="pricing-action">
@@ -465,10 +476,14 @@
                         <div class="pricing-features">
                             <ul>
                                 <li><strong>Up to 70 Adventures</strong></li>
-                                <li>Advanced Tool Kit</li>
+                                <li>You are a municipality, national park or publisher</li>
+                                <li>Make your assets more accessible</li>
+                                <li>Build your brand</li>
+                                <li>Grow your audience</li>
+                                <li>Provide your guests and cabin owners with <br>a valuable service</li>
+                                <li>Connect with local adventure companies to <br>provide a diverse experience for your guests</li>
+                                <li>Significantly cut down on printing costs</li>
                                 <li>Visitor Center Integration</li>
-                                <li>Build 1 Digital Guidebook</li>
-                                <li>2 Signature Adventures</li>
                                 <li><strong>30 000 NOK Startup</strong></li>
                                 <li>&nbsp;</li>
                             </ul>
@@ -492,11 +507,8 @@
                         <div class="pricing-features">
                             <ul>
                                 <li><strong>70-210 Adventures</strong></li>
-                                <li>Advanced Tool Kit</li>
+                                <li>Specialized packages that fit your unique <br>needs as a larger size organization, <br>region or destination company</li>
                                 <li>Visitor Center Integration</li>
-                                <li>Database Access</li>
-                                <li>Build 3 Digital Guidebooks</li>
-                                <li>10 Signature Adventures</li>
                                 <li><strong>50 000 NOK Startup</strong></li>
 
                             </ul>
