Centered marvel frame

--- a/index.html
+++ b/index.html
@@ -262,11 +262,14 @@
                             </div>
                         </div>-->
 
-                        <div id="oc-images" class="bottommargin-lg" style="margin-left:30%;">
-                            <iframe src="https://marvelapp.com/96094i?emb=1"
-                                    width="402" height="500" allowtransparency="true" frameborder="0"></iframe>
-
+                        <div >
+                            <iframe  class="center-block" src="https://marvelapp.com/96094i?emb=1"
+                                    width="402" height="500" allowtransparency="true" frameborder="0">
+                            </iframe>
+                            <br><br>
                         </div>
+
+
                         <script type="text/javascript">
                             jQuery(document).ready(function ($) {
                                 var ocImages = $("#oc-images");
