Removed Everest package, minor CSS changes

--- a/index.html
+++ b/index.html
@@ -443,23 +443,22 @@
 
             <div class="pricing bottommargin clearfix">
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
 
                     <div class="pricing-box">
                         <div class="pricing-title">
                             <h3>Mini</h3>
                         </div>
                         <div class="pricing-price">
-                            <span class="price-unit">NOK</span>1200<span class="price-tenure">/month</span>
+                            <span class="price-unit"></span>Free<span class="price-tenure"></span>
                         </div>
                         <div class="pricing-features">
                             <ul>
-                                <li><strong>10 Adventures</strong></li>
                                 <li>You are a guiding or adventure company, <br>boutique outdoors hotel</li>
                                 <li>Create single & multiday packages through <br>access to the TurApp database of activities</li>
                                 <li>Easy to use booking system</li>
                                 <li>Connect with a targeted audience</li>
-                                <li><strong>10 000 NOK Startup*</strong></li>
+                                <li>10% service fee on each sold adventure</li>
                             </ul>
                         </div>
                         <div class="pricing-action">
@@ -469,19 +468,17 @@
 
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
 
                     <div class="pricing-box best-price">
                         <div class="pricing-title">
                             <h3>Matterhorn</h3>
-                            <span>Most Popular</span>
                         </div>
                         <div class="pricing-price">
                             <span class="price-unit">NOK</span>2500<span class="price-tenure">/month</span>
                         </div>
                         <div class="pricing-features">
                             <ul>
-                                <li><strong>Up to 70 Adventures</strong></li>
                                 <li>You are a municipality, national park or publisher</li>
                                 <li>Make your assets more accessible</li>
                                 <li>Build your brand</li>
@@ -489,7 +486,7 @@
                                 <li>Provide your guests and cabin owners with <br>a valuable service</li>
                                 <li>Connect with local adventure companies to <br>provide a diverse experience for your guests</li>
                                 <li>Significantly cut down on printing costs</li>
-                                <li>Visitor Center Integration</li>
+                                <li>10% service fee on each sold adventure</li>
                                 <li><strong>30 000 NOK Startup</strong></li>
                                 <li>&nbsp;</li>
                             </ul>
@@ -501,30 +498,7 @@
 
                 </div>
 
-                <div class="col-sm-4">
-
-                    <div class="pricing-box">
-                        <div class="pricing-title">
-                            <h3>Everest</h3>
-                        </div>
-                        <div class="pricing-price">
-                            <span class="price-unit">NOK</span>7500<span class="price-tenure">/month</span>
-                        </div>
-                        <div class="pricing-features">
-                            <ul>
-                                <li><strong>70-210 Adventures</strong></li>
-                                <li>Specialized packages that fit your unique <br>needs as a larger size organization, <br>region or destination company</li>
-                                <li>Visitor Center Integration</li>
-                                <li><strong>50 000 NOK Startup</strong></li>
-
-                            </ul>
-                        </div>
-                        <div class="pricing-action">
-                            <button id="signUpEverest" class="btn btn-success btn-block btn-lg">Sign Up</a>
-                        </div>
-                    </div>
-
-                </div>
+                
 
             </div>
 
