--- a/index.html
+++ b/index.html
@@ -447,22 +447,25 @@
 
                     <div class="pricing-box">
                         <div class="pricing-title">
-                            <h3>Mini</h3>
+                            <h3>FREE</h3>
                         </div>
                         <div class="pricing-price">
-                            <span class="price-unit"></span>Free<span class="price-tenure"></span>
+                            <span class="price-unit"></span>EXPLORER<span class="price-tenure"></span>
                         </div>
                         <div class="pricing-features">
                             <ul>
-                                <li>You are a guiding or adventure company, <br>boutique outdoors hotel</li>
-                                <li>Create single & multiday packages through <br>access to the TurApp database of activities</li>
-                                <li>Easy to use booking system</li>
-                                <li>Connect with a targeted audience</li>
-                                <li>10% service fee on each sold adventure</li>
+                                <li>You are a Guide, Activity Company or a <br>Boutique Outdoors Hotel</li>
+                                <li>Increase Revenue</li>
+                                <li>Improve Visibility</li>
+                                <li>Direct Access to a Growing Ecosystem of Adventurers</li>
+                                <li>Build Your Brand </li>
+                                <li>Interact With Your Guests on Adventures </li>
+                                <li>Access World Class Mapping and GPS Tracking</li>
+                                <li>Get Social</li>
                             </ul>
                         </div>
                         <div class="pricing-action">
-                            <button id="signUpMini" class="btn btn-info btn-block btn-lg">Sign Up</a>
+                            <button id="signUpMini" class="btn btn-info btn-block btn-lg">Sign Up<br><div class="sign_up_button_subtitle"></div></a>
                         </div>
                     </div>
 
@@ -472,27 +475,27 @@
 
                     <div class="pricing-box best-price">
                         <div class="pricing-title">
-                            <h3>Matterhorn</h3>
+                            <h3>PRO</h3>
                         </div>
                         <div class="pricing-price">
-                            <span class="price-unit">NOK</span>2500<span class="price-tenure">/month</span>
+                            <span class="price-unit"></span>MATTERHORN<span class="price-tenure"></span>
                         </div>
                         <div class="pricing-features">
                             <ul>
-                                <li>You are a municipality, national park or publisher</li>
-                                <li>Make your assets more accessible</li>
-                                <li>Build your brand</li>
-                                <li>Grow your audience</li>
-                                <li>Provide your guests and cabin owners with <br>a valuable service</li>
-                                <li>Connect with local adventure companies to <br>provide a diverse experience for your guests</li>
-                                <li>Significantly cut down on printing costs</li>
-                                <li>10% service fee on each sold adventure</li>
-                                <li><strong>30 000 NOK Startup</strong></li>
+                                <li>You are a Municipality, National Park or Region</li>
+                                <li>Digitalize Your Greatest Assets</li>
+                                <li>Grow Your Audience </li>
+                                <li>Build Your Brand</li>
+                                <li>Put Your Region on the International Map</li>
+                                <li>Connect with Local Adventure Companies & Diversify Your Guests Experience</li>
+                                <li>Access World Class Mapping and GPS Tracking</li>
+                                <li>Significantly Cut Down on Printing Costs </li>
+                                <li>30 000 NOK Startup</li>
                                 <li>&nbsp;</li>
                             </ul>
                         </div>
                         <div class="pricing-action">
-                            <button id="signUpMatterhorn" class="btn btn-danger btn-block btn-lg">Sign Up</a>
+                            <button id="signUpMatterhorn" class="btn btn-danger btn-block btn-lg">Sign Up<br><div class="sign_up_button_subtitle">(Starting at 2500 NOK/month)</div></a>
                         </div>
                     </div>
 
